Ported the project from ant to maven and modified the code to support JDK 8